# az-databricks-mlops

./: .gitignore  README.md  pyproject.toml
as_databricks_mlops/: __init__.py  cli.py  generator.py  review.py  trigger.py
as_databricks_mlops/templates/mlops/: config.py.j2  run_inference.py.j2  run_training.py.j2
as_databricks_mlops/templates/resources/: inference-job.yml.j2  training-job.yml.j2
az_databricks_mlops/: __init__.py  cli.py  generator.py  review.py  trigger.py
az_databricks_mlops/templates/: databricks.yml.j2
az_databricks_mlops/templates/llmops/: config.py.j2  deploy.py.j2  run_agent_deploy.py.j2  run_agent_dev.py.j2  run_agent_eval.py.j2  run_agent_serve.py.j2  scorers.py.j2
az_databricks_mlops/templates/mlops/: run_deploy.py.j2  run_training.py.j2
az_databricks_mlops/templates/notebooks/: run_agent_pipeline.py.j2  run_pipeline.py.j2
az_databricks_mlops/templates/resources/: agent-job.yml.j2  agent-serve-job.yml.j2  training-job.yml.j2
az_mlops/: __init__.py  cli.py  generator.py  trigger.py
az_mlops/templates/: GETTING_STARTED.md.j2  databricks.yml.j2
az_mlops/templates/mlops/: config.py.j2  deploy.py.j2  dqx_checks.py.j2  run_deploy.py.j2  run_training.py.j2  run_validation.py.j2
az_mlops/templates/resources/: dqx-job.yml.j2  inference-job.yml.j2  training-job.yml.j2
examples/: demo.sh
examples/messy-agent-project/: README.md  agent.py  databricks.yml  requirements.txt
examples/messy-ml-project/: .gitignore  GETTING_STARTED.md  README.md  databricks.yml  model.pkl  predict.py
ralph/: prd.json
tasks/: prd-adm-e2e-docs-and-testing.md
tests/: conftest.py  notebook_e2e_test.py  test_cli.py  test_generator.py
(+27 files in other folders)
